--- a/assets/global.css
+++ b/assets/global.css
@@ -17,3 +17,13 @@ input {
 	all: unset;
 	color-scheme: dark;
 }
+
+@layer utilities {
+	.hover-opacity {
+		@apply relative transition-all before:absolute before:inset-0 before:h-full before:w-full before:bg-current before:opacity-0 before:content-[''] hover:before:opacity-20 active:transition-none active:before:opacity-40;
+	}
+
+	.active-scale {
+		@apply hover-opacity active:scale-90;
+	}
+}
