--- a/_theme.scss
+++ b/_theme.scss
@@ -1,3 +1,4 @@
-$colorDisabled: #737373;
-$colorDisabledDark: #404040;
+$colorNeutralLight: #a3a3a3;
+$colorNeutral: #737373;
+$colorNeutralDark: #404040;
 $colorPrimary: #84cc16;
