--- a/assets/global.scss
+++ b/assets/global.scss
@@ -1,16 +1,18 @@
 @use "$lib/commons/theme";
 
 html {
+	height: 100%;
+	font-family: sans-serif;
+	color: white;
+	background: black;
 	color-scheme: dark;
 	scrollbar-gutter: stable;
+	-webkit-tap-highlight-color: transparent;
 }
 
 body {
+	height: 100%;
 	margin: 0;
-	background: black;
-	color: white;
-	font-family: sans-serif;
-	-webkit-tap-highlight-color: transparent;
 }
 
 input,
