--- a/assets/global.scss
+++ b/assets/global.scss
@@ -1,7 +1,7 @@
 html {
 	height: 100%;
 	font-family: sans-serif;
-	scrollbar-gutter: stable;
+	overflow-y: scroll;
 	-webkit-tap-highlight-color: transparent;
 }
 
